cncProd/force-app/main/default/objects/MB_Build_Spec__c/MB_Build_Spec__c.object-meta.xml
<CustomObject>
    <label>MB Build Spec</label>
    <nameField>
        <displayFormat>MBBS-{00000000}</displayFormat>
        <label>MB Build Spec Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MB Build Specs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>