cncProd/force-app/main/default/objects/MB_Build_Spec__c/fields/Batch_Processed__c.field-meta.xml
<CustomField>
    <fullName>Batch_Processed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Batch Processed</label>
    <type>Checkbox</type>
</CustomField>