cncProd/force-app/main/default/objects/MB_Build_Spec__c/fields/Build_Spec_Compared_ID__c.field-meta.xml
<CustomField>
    <fullName>Build_Spec_Compared_ID__c</fullName>
    <formula>Variant_Code__c +  Option_Code__c</formula>
    <label>Build Spec Compared ID</label>
    <type>Text</type>
</CustomField>