cncProd/force-app/main/default/objects/MB_Build_Spec__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model</label>
    <referenceTo>Model__c</referenceTo>
    <relationshipLabel>MB Build Specs</relationshipLabel>
    <relationshipName>MB_Build_Specs</relationshipName>
    <type>Lookup</type>
</CustomField>