cncProd/force-app/main/default/objects/MB_Build_Spec__c/fields/Option_Code__c.field-meta.xml
<CustomField>
    <fullName>Option_Code__c</fullName>
    <label>Option Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>