cncProd/force-app/main/default/objects/MB_Build_Spec__c/fields/Option_Group__c.field-meta.xml
<CustomField>
    <fullName>Option_Group__c</fullName>
    <label>Option Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>