cncProd/force-app/main/default/objects/MB_Build_Spec__c/fields/Option_Type__c.field-meta.xml
<CustomField>
    <fullName>Option_Type__c</fullName>
    <label>Option Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>