cncProd/force-app/main/default/objects/MB_Build_Spec__c/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variant</label>
    <referenceTo>Variant__c</referenceTo>
    <relationshipLabel>MB Build Specs</relationshipLabel>
    <relationshipName>MB_Build_Specs</relationshipName>
    <type>Lookup</type>
</CustomField>