cncProd/force-app/main/default/objects/MB_Build_Spec__c/fields/Variant_Code__c.field-meta.xml
<CustomField>
    <fullName>Variant_Code__c</fullName>
    <description>Lookup for Variant Code</description>
    <formula>Variant__r.Variant_Magic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variant Code</label>
    <type>Text</type>
</CustomField>