cncProd/force-app/main/default/objects/MB_Build_Spec__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Model__c</columns>
    <columns>Variant__c</columns>
    <columns>Variant_Code__c</columns>
    <columns>Option_Code__c</columns>
    <columns>Option_Type__c</columns>
    <columns>Option_Group__c</columns>
    <columns>Description__c</columns>
    <columns>Invoice_Price__c</columns>
    <columns>Highlight_Option__c</columns>
    <columns>Batch_Processed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Option_Code__c</field>
        <operation>contains</operation>
        <value>MBSMBOUT236</value>
    </filters>
    <label>All</label>
</ListView>