cncProd/force-app/main/default/objects/MB_Build_Spec__c/listViews/All_Dealer_Fitted_Options.listView-meta.xml
<ListView>
    <fullName>All_Dealer_Fitted_Options</fullName>
    <columns>NAME</columns>
    <columns>Model__c</columns>
    <columns>Variant__c</columns>
    <columns>Option_Code__c</columns>
    <columns>Option_Type__c</columns>
    <columns>Option_Group__c</columns>
    <columns>Description__c</columns>
    <columns>Highlight_Option__c</columns>
    <columns>Batch_Processed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Option_Code__c</field>
        <operation>contains</operation>
        <value>VES</value>
    </filters>
    <filters>
        <field>Variant_Code__c</field>
        <operation>equals</operation>
        <value>21308022-SG2</value>
    </filters>
    <label>All Dealer Fitted Options</label>
</ListView>